Apply translation memory

--- a/l10n/po/ja_JP/_guides/liquibase.adoc.po
+++ b/l10n/po/ja_JP/_guides/liquibase.adoc.po
@@ -95,6 +95,12 @@ msgid ""
 "    </dependency>\n"
 "</dependencies>\n"
 msgstr ""
+"    <!-- JDBC driver dependencies -->\n"
+"    <dependency>\n"
+"        <groupId>io.quarkus</groupId>\n"
+"        <artifactId>quarkus-jdbc-postgresql</artifactId>\n"
+"    </dependency>\n"
+"</dependencies>\n"
 
 #. type: Plain text
 #: upstream/_guides/liquibase.adoc:50
