--- a/l10n/po/ja_JP/_versions/1.11/guides/hibernate-orm.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/hibernate-orm.adoc.po
@@ -145,6 +145,12 @@ msgid ""
 "    </dependency>\n"
 "</dependencies>\n"
 msgstr ""
+"    <!-- JDBC driver dependencies -->\n"
+"    <dependency>\n"
+"        <groupId>io.quarkus</groupId>\n"
+"        <artifactId>quarkus-jdbc-postgresql</artifactId>\n"
+"    </dependency>\n"
+"</dependencies>\n"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:61
@@ -370,13 +376,13 @@ msgstr ""
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:183
 #, no-wrap
 msgid "Multiple persistence units"
-msgstr ""
+msgstr "複数の永続性ユニット"
 
 #. type: Title ====
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:185
 #, no-wrap
 msgid "Setting up multiple persistence units"
-msgstr ""
+msgstr "複数の永続化ユニットの設定"
 
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:188
@@ -492,17 +498,17 @@ msgstr ""
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:242
 #, no-wrap
 msgid "Attaching model classes to persistence units"
-msgstr ""
+msgstr "モデルクラスを永続化ユニットにアタッチする"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:245
 msgid "There are two ways to attach model classes to persistence units, and they should not be mixed:"
-msgstr ""
+msgstr "モデルクラスを永続化ユニットにアタッチする方法は2つあり、混在してはいけません。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:247
 msgid "Via the `packages` configuration property;"
-msgstr ""
+msgstr "`packages` 設定プロパティーを使用します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:248
@@ -539,7 +545,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:264
 msgid "This configuration snippet will create two persistence units:"
-msgstr ""
+msgstr "この設定スニペットは、2つの永続化ユニットを作成します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:266
@@ -811,28 +817,28 @@ msgstr ""
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:407
 #, no-wrap
 msgid "Defining entities in external projects or jars"
-msgstr ""
+msgstr "外部プロジェクトや jar でエンティティーを定義する"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:411
 msgid "Hibernate ORM in Quarkus relies on compile-time bytecode enhancements to your entities. If you define your entities in the same project where you build your Quarkus application, everything will work fine."
-msgstr ""
+msgstr "QuarkusのHibernate ORMは、エンティティーに対するコンパイル時のバイトコード強化に依存しています。Quarkusアプリケーションを構築するのと同じプロジェクトでエンティティーを定義すれば、すべてがうまく動作します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:414
 msgid "If the entities come from external projects or jars, you can make sure that your jar is treated like a Quarkus application library by adding an empty `META-INF/beans.xml` file."
-msgstr ""
+msgstr "エンティティーが外部のプロジェクトやジャーから来ている場合は、空の `META-INF/beans.xml` ファイルを追加することで、jarがQuarkusアプリケーションライブラリのように扱われるようにすることができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:416
 msgid "This will allow Quarkus to index and enhance your entities as if they were inside the current project."
-msgstr ""
+msgstr "これにより、Quarkusは、エンティティーが現在のプロジェクトの内部にあるかのようにインデックスを作成し、強化することができます。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:417
 #, no-wrap
 msgid "Hibernate ORM in development mode"
-msgstr ""
+msgstr "開発モードでのHibernate ORM"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:420
@@ -889,7 +895,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:496
 #, no-wrap
 msgid "application.properties"
-msgstr ""
+msgstr "application.properties"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:465
@@ -932,38 +938,38 @@ msgstr ""
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:479
 #, no-wrap
 msgid "Hibernate ORM in production mode"
-msgstr ""
+msgstr "本番モードでのHibernate ORM"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:483
 msgid "Quarkus comes with default profiles (`dev`, `test` and `prod`).  And you can add your own custom profiles to describe various environments (`staging`, `prod-us`, etc)."
-msgstr ""
+msgstr "Quarkusにはデフォルトのプロファイルが付属しています ( `dev` , `test` と `prod` )。また、様々な環境を記述するために独自のカスタムプロファイルを追加することができます ( `staging` , `prod-us` , など )。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:485
 msgid "The Hibernate ORM Quarkus extension sets some default configurations differently in dev and test modes than in other environments."
-msgstr ""
+msgstr "Hibernate ORM Quarkusエクステンションでは、いくつかのデフォルト設定が、開発モードとテストモードで他の環境とは異なるように設定されています。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:487
 msgid "`quarkus.hibernate-orm.sql-load-script` is set to `no-file` for all profiles except the `dev` and `test` ones."
-msgstr ""
+msgstr "`dev` と `test` 以外のプロフィールは `quarkus.hibernate-orm.sql-load-script` が `no-file` に設定されています。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:491
 msgid "You can override it in your `application.properties` explicitly (e.g. `%prod.quarkus.hibernate-orm.sql-load-script = import.sql`)  but we wanted you to avoid overriding your database by accident in prod :)"
-msgstr ""
+msgstr "ユーザーが `application.properties` で明示的にオーバーライドすることもできますが (例: `%prod.quarkus.hibernate-orm.sql-load-script = import.sql` )、prod で誤ってデータベースをオーバーライドしないようにしたいと思いました :)"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:494
 msgid "Speaking of, make sure to not drop your database schema in production! Add the following in your properties file."
-msgstr ""
+msgstr "そういえば、本番ではデータベーススキーマを落とさないようにしましょう!プロパティーファイルに以下を追加します。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:503
 #, no-wrap
 msgid "Caching"
-msgstr ""
+msgstr "キャッシング"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:506
@@ -974,12 +980,12 @@ msgstr ""
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:507
 #, no-wrap
 msgid "Caching of entities"
-msgstr ""
+msgstr "エンティティーのキャッシュ"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:510
 msgid "To enable second-level cache, mark the entities that you want cached with `@javax.persistence.Cacheable`:"
-msgstr ""
+msgstr "第 2 レベルのキャッシュを有効にするには、キャッシュしたいエンティティーを `@javax.persistence.Cacheable` でマークします。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:519
@@ -996,7 +1002,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:522
 msgid "When an entity is annotated with `@Cacheable`, all its field values are cached except for collections and relations to other entities."
-msgstr ""
+msgstr "エンティティーが `@Cacheable` でアノテーションされているときは、コレクションと他のエンティティーとの関係を除いて、そのすべてのフィールド値がキャッシュされます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:524
@@ -1007,7 +1013,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:525
 #, no-wrap
 msgid "Caching of collections and relations"
-msgstr ""
+msgstr "コレクションとリレーションのキャッシング"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:528
@@ -1102,7 +1108,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:574
 #, no-wrap
 msgid "Tuning of Cache Regions"
-msgstr ""
+msgstr "キャッシュ領域の調整"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:577
@@ -1154,12 +1160,12 @@ msgstr ""
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:603
 #, no-wrap
 msgid "Limitations of Caching"
-msgstr ""
+msgstr "キャッシングの制限"
 
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:606
 msgid "The caching technology provided within Quarkus is currently quite rudimentary and limited."
-msgstr ""
+msgstr "Quarkusで提供されているキャッシング技術は、現在のところ非常に初歩的で限られています。"
 
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:608
@@ -1263,18 +1269,18 @@ msgstr "メトリクス"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:657
 msgid "Either link:micrometer[Micrometer] or link:microprofile-metrics[SmallRye Metrics] are capable of exposing metrics that Hibernate ORM collects at runtime. To enable exposure of Hibernate metrics on the `/q/metrics` endpoint, make sure your project depends on a metrics extension and set the configuration property `quarkus.hibernate-orm.metrics.enabled` to `true`.  When using link:microprofile-metrics[SmallRye Metrics], metrics will be available under the `vendor` scope."
-msgstr ""
+msgstr "link:micrometer[Micrometer] または link:microprofile-metrics[SmallRye Metrics] は、Hibernate ORM が実行時に収集するメトリクスを公開することができます。 `/q/metrics` エンドポイントで Hibernate メトリクスを公開できるようにするには、プロジェクトがメトリクスエクステンションに依存していることを確認し、設定プロパティー `quarkus.hibernate-orm.metrics.enabled` を `true` に設定します。 link:microprofile-metrics[SmallRye Metrics] を使用すると、メトリクスは `vendor` スコープの下で利用可能になります。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:658
 #, no-wrap
 msgid "Limitations and other things you should know"
-msgstr ""
+msgstr "制限事項など知っておくべきこと"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:662
 msgid "Quarkus does not modify the libraries it uses; this rule applies to Hibernate ORM as well: when using this extension you will mostly have the same experience as using the original library."
-msgstr ""
+msgstr "Quarkusは使用するライブラリを変更しません。このルールはHibernate ORMにも適用されます。このエクステンションを使用すると、元のライブラリを使用した場合とほとんど同じエクスペリエンスが得られます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:666
@@ -1285,7 +1291,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:667
 #, no-wrap
 msgid "Automatic build time enhancement"
-msgstr ""
+msgstr "自動ビルド時間の強化"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:671
@@ -1305,19 +1311,19 @@ msgstr ""
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:681
 msgid "This limitation might be removed in the future."
-msgstr ""
+msgstr "この制限は将来的に削除される可能性があります。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:683
 #, no-wrap
 msgid "Automatic integration"
-msgstr ""
+msgstr "自動統合"
 
 #. type: Labeled list
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:685
 #, no-wrap
 msgid "Transaction Manager integration"
-msgstr ""
+msgstr "トランザクション・マネージャーの統合"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:689
@@ -1328,7 +1334,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:690
 #, no-wrap
 msgid "Connection pool"
-msgstr ""
+msgstr "接続プール"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:694
@@ -1339,7 +1345,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:695
 #, no-wrap
 msgid "Second Level Cache"
-msgstr ""
+msgstr "セカンドレベルキャッシュ"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:698
@@ -1389,7 +1395,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:716
 #, no-wrap
 msgid "Binding the Session to ThreadLocal context"
-msgstr ""
+msgstr "セッションをThreadLocalコンテキストにバインドする"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:721
@@ -1411,13 +1417,13 @@ msgstr ""
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:726
 #, no-wrap
 msgid "Other notable differences"
-msgstr ""
+msgstr "その他の特記すべき相違点"
 
 #. type: Labeled list
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:728
 #, no-wrap
 msgid "Format of `import.sql`"
-msgstr ""
+msgstr "`import.sql` のフォーマット"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:732
@@ -1439,33 +1445,33 @@ msgstr ""
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:737
 #, no-wrap
 msgid "Configure your datasource"
-msgstr ""
+msgstr "データソースの設定"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:741
 msgid "Datasource configuration is extremely simple, but is covered in a different guide as technically it's implemented by the Agroal connection pool extension for Quarkus."
-msgstr ""
+msgstr "データソースの設定は非常にシンプルですが、技術的にはQuarkus用のAgroal接続プールエクステンションによって実装されているため、別のガイドで説明します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:743
 msgid "Jump over to link:datasource[Quarkus - Datasources] for all details."
-msgstr ""
+msgstr "すべての詳細については、 link:datasource[Quarkus - データソース] にジャンプしてください。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:745
 #, no-wrap
 msgid "Multitenancy"
-msgstr ""
+msgstr "マルチテナンシー"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:748
 msgid "\"The term multitenancy, in general, is applied to software development to indicate an architecture in which a single running instance of an application simultaneously serves multiple clients (tenants). This is highly common in SaaS solutions. Isolating information (data, customizations, etc.) pertaining to the various tenants is a particular challenge in these systems. This includes the data owned by each tenant stored in the database\" (link:https://docs.jboss.org/hibernate/orm/5.4/userguide/html_single/Hibernate_User_Guide.html#multitenacy[Hibernate User Guide])."
-msgstr ""
+msgstr "\"マルチテナンシーという用語は、一般的にソフトウェア開発に適用され、アプリケーションの単一の実行中のインスタンスが同時に複数のクライアント(テナント)にサービスを提供するアーキテクチャを示しています。これはSaaSソリューションでは非常に一般的です。様々なテナントに関連する情報(データ、カスタマイズなど)を分離することは、これらのシステムでは特別な課題です。これには、データベースに格納されている各テナントが所有するデータも含まれます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:750
 msgid "Quarkus currently supports the link:https://docs.jboss.org/hibernate/orm/5.4/userguide/html_single/Hibernate_User_Guide.html#multitenacy-separate-database[separate database] and the link:https://docs.jboss.org/hibernate/orm/5.4/userguide/html_single/Hibernate_User_Guide.html#multitenacy-separate-schema[separate schema] approach."
-msgstr ""
+msgstr "Quarkusは現在、 link:https://docs.jboss.org/hibernate/orm/5.4/userguide/html_single/Hibernate_User_Guide.html#multitenacy-separate-database[分離型データベース] と link:https://docs.jboss.org/hibernate/orm/5.4/userguide/html_single/Hibernate_User_Guide.html#multitenacy-separate-schema[分離型スキーマ] アプローチをサポートしています。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:751
@@ -1476,7 +1482,7 @@ msgstr "アプリケーションの記述"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:754
 msgid "Let's start by implementing the `/{tenant}` endpoint. As you can see from the source code below it is just a regular JAX-RS resource:"
-msgstr ""
+msgstr "まずは `/{tenant}` エンドポイントを実装してみましょう。下のソースコードを見るとわかるように、これは通常の JAX-RS リソースです。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:762
@@ -1738,7 +1744,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:900
 msgid "Here is an example of the Flyway SQL (`V1.0.0__create_fruits.sql`) to be created in the configured folder `src/main/resources/schema`."
-msgstr ""
+msgstr "ここでは、設定されたフォルダー `src/main/resources/schema` に作成される Flyway SQL ( `V1.0.0__create_fruits.sql` ) の例を示します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:913
@@ -1781,7 +1787,7 @@ msgstr "データベースアプローチ"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:931
 msgid "For every tenant you need to create a named data source with the same identifier that is returned by the `TenantResolver`."
-msgstr ""
+msgstr "すべてのテナントに対して、 `TenantResolver` が返すのと同じ識別子を持つ名前付きデータソースを作成する必要があります。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:939
@@ -1834,12 +1840,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:962
 msgid "Following are examples of the Flyway SQL files to be created in the configured folder `src/main/resources/database`."
-msgstr ""
+msgstr "以下は、設定されたフォルダー `src/main/resources/database` に作成する Flyway SQL ファイルの例です。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:964
 msgid "Default schema (`src/main/resources/database/default/V1.0.0__create_fruits.sql`):"
-msgstr ""
+msgstr "デフォルトスキーマ ( `src/main/resources/database/default/V1.0.0__create_fruits.sql` )。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:977
@@ -1860,7 +1866,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:980
 msgid "Mycompany schema (`src/main/resources/database/mycompany/V1.0.0__create_fruits.sql`):"
-msgstr ""
+msgstr "Mycompany schema (`src/main/resources/database/mycompany/V1.0.0__create_fruits.sql`):"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/hibernate-orm.adoc:993
