--- a/l10n/po/ja_JP/_versions/1.11/guides/hibernate-search-orm-elasticsearch.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/hibernate-search-orm-elasticsearch.adoc.po
@@ -1246,7 +1246,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/hibernate-search-orm-elasticsearch.adoc:642
 #, no-wrap
 msgid "Multiple persistence units"
-msgstr ""
+msgstr "複数の永続性ユニット"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/hibernate-search-orm-elasticsearch.adoc:644
@@ -1381,7 +1381,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/hibernate-search-orm-elasticsearch.adoc:703
 #, no-wrap
 msgid "Attaching model classes to persistence units"
-msgstr ""
+msgstr "モデルクラスを永続化ユニットにアタッチする"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-search-orm-elasticsearch.adoc:708
