--- a/l10n/po/ja_JP/_versions/1.11/guides/security-oauth2.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/security-oauth2.adoc.po
@@ -251,12 +251,12 @@ msgstr ""
 #: upstream/_versions/1.11/guides/security-oauth2.adoc:127
 #, no-wrap
 msgid "Setting up application.properties"
-msgstr ""
+msgstr "application.propertiesの設定"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-oauth2.adoc:130
 msgid "You need to configure your application with the following minimal properties:"
-msgstr ""
+msgstr "以下の最小限のプロパティーでアプリケーションを設定する必要があります。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/security-oauth2.adoc:136
@@ -502,7 +502,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/security-oauth2.adoc:275
 #, no-wrap
 msgid "Roles mapping"
-msgstr ""
+msgstr "ロールマッピング"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-oauth2.adoc:278
