--- a/l10n/po/ja_JP/_versions/1.7/guides/hibernate-orm-panache.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/hibernate-orm-panache.adoc.po
@@ -189,6 +189,12 @@ msgid ""
 "    </dependency>\n"
 "</dependencies>\n"
 msgstr ""
+"    <!-- JDBC driver dependencies -->\n"
+"    <dependency>\n"
+"        <groupId>io.quarkus</groupId>\n"
+"        <artifactId>quarkus-jdbc-postgresql</artifactId>\n"
+"    </dependency>\n"
+"</dependencies>\n"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm-panache.adoc:92
@@ -1737,7 +1743,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/hibernate-orm-panache.adoc:970
 #, no-wrap
 msgid "Defining entities in external projects or jars"
-msgstr ""
+msgstr "外部プロジェクトや jar でエンティティーを定義する"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm-panache.adoc:973
