--- a/l10n/po/ja_JP/_versions/1.7/guides/mongodb-panache.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/mongodb-panache.adoc.po
@@ -2030,7 +2030,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/mongodb-panache.adoc:1073
 #, no-wrap
 msgid "Defining entities in external projects or jars"
-msgstr ""
+msgstr "外部プロジェクトや jar でエンティティーを定義する"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/mongodb-panache.adoc:1076
