--- a/l10n/po/ja_JP/_versions/1.7/guides/security-oauth2.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/security-oauth2.adoc.po
@@ -450,7 +450,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/security-oauth2.adoc:250
 #, no-wrap
 msgid "Setting up application.properties"
-msgstr ""
+msgstr "application.propertiesの設定"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-oauth2.adoc:253
@@ -561,7 +561,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/security-oauth2.adoc:302
 #, no-wrap
 msgid "Roles mapping"
-msgstr ""
+msgstr "ロールマッピング"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/security-oauth2.adoc:305
