--- a/l10n/po/ja_JP/_versions/1.11/guides/hibernate-orm-panache.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/hibernate-orm-panache.adoc.po
@@ -190,6 +190,12 @@ msgid ""
 "    </dependency>\n"
 "</dependencies>\n"
 msgstr ""
+"    <!-- JDBC driver dependencies -->\n"
+"    <dependency>\n"
+"        <groupId>io.quarkus</groupId>\n"
+"        <artifactId>quarkus-jdbc-postgresql</artifactId>\n"
+"    </dependency>\n"
+"</dependencies>\n"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm-panache.adoc:92
@@ -1774,7 +1780,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/hibernate-orm-panache.adoc:979
 #, no-wrap
 msgid "Defining entities in external projects or jars"
-msgstr ""
+msgstr "外部プロジェクトや jar でエンティティーを定義する"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/hibernate-orm-panache.adoc:982
