--- a/l10n/po/ja_JP/_versions/1.11/guides/security-openid-connect-multitenancy.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/security-openid-connect-multitenancy.adoc.po
@@ -186,7 +186,7 @@ msgstr "アプリケーションの記述"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-openid-connect-multitenancy.adoc:82
 msgid "Let's start by implementing the `/{tenant}` endpoint. As you can see from the source code below it is just a regular JAX-RS resource:"
-msgstr ""
+msgstr "まずは `/{tenant}` エンドポイントを実装してみましょう。下のソースコードを見るとわかるように、これは通常の JAX-RS リソースです。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/security-openid-connect-multitenancy.adoc:86
