--- a/l10n/po/ja_JP/_versions/1.7/guides/flyway.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/flyway.adoc.po
@@ -94,6 +94,12 @@ msgid ""
 "    </dependency>\n"
 "</dependencies>\n"
 msgstr ""
+"    <!-- JDBC driver dependencies -->\n"
+"    <dependency>\n"
+"        <groupId>io.quarkus</groupId>\n"
+"        <artifactId>quarkus-jdbc-postgresql</artifactId>\n"
+"    </dependency>\n"
+"</dependencies>\n"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/flyway.adoc:51
