--- a/l10n/po/ja_JP/_versions/1.7/guides/hibernate-orm.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/hibernate-orm.adoc.po
@@ -145,6 +145,12 @@ msgid ""
 "    </dependency>\n"
 "</dependencies>\n"
 msgstr ""
+"    <!-- JDBC driver dependencies -->\n"
+"    <dependency>\n"
+"        <groupId>io.quarkus</groupId>\n"
+"        <artifactId>quarkus-jdbc-postgresql</artifactId>\n"
+"    </dependency>\n"
+"</dependencies>\n"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:61
@@ -474,28 +480,28 @@ msgstr ""
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:236
 #, no-wrap
 msgid "Defining entities in external projects or jars"
-msgstr ""
+msgstr "外部プロジェクトや jar でエンティティーを定義する"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:240
 msgid "Hibernate ORM in Quarkus relies on compile-time bytecode enhancements to your entities. If you define your entities in the same project where you build your Quarkus application, everything will work fine."
-msgstr ""
+msgstr "QuarkusのHibernate ORMは、エンティティーに対するコンパイル時のバイトコード強化に依存しています。Quarkusアプリケーションを構築するのと同じプロジェクトでエンティティーを定義すれば、すべてがうまく動作します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:243
 msgid "If the entities come from external projects or jars, you can make sure that your jar is treated like a Quarkus application library by adding an empty `META-INF/beans.xml` file."
-msgstr ""
+msgstr "エンティティーが外部のプロジェクトやジャーから来ている場合は、空の `META-INF/beans.xml` ファイルを追加することで、jarがQuarkusアプリケーションライブラリのように扱われるようにすることができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:245
 msgid "This will allow Quarkus to index and enhance your entities as if they were inside the current project."
-msgstr ""
+msgstr "これにより、Quarkusは、エンティティーが現在のプロジェクトの内部にあるかのようにインデックスを作成し、強化することができます。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:246
 #, no-wrap
 msgid "Hibernate ORM in development mode"
-msgstr ""
+msgstr "開発モードでのHibernate ORM"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:249
@@ -552,7 +558,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:325
 #, no-wrap
 msgid "application.properties"
-msgstr ""
+msgstr "application.properties"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:294
@@ -586,38 +592,38 @@ msgstr ""
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:308
 #, no-wrap
 msgid "Hibernate ORM in production mode"
-msgstr ""
+msgstr "本番モードでのHibernate ORM"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:312
 msgid "Quarkus comes with default profiles (`dev`, `test` and `prod`).  And you can add your own custom profiles to describe various environments (`staging`, `prod-us`, etc)."
-msgstr ""
+msgstr "Quarkusにはデフォルトのプロファイルが付属しています ( `dev` , `test` と `prod` )。また、様々な環境を記述するために独自のカスタムプロファイルを追加することができます ( `staging` , `prod-us` , など )。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:314
 msgid "The Hibernate ORM Quarkus extension sets some default configurations differently in dev and test modes than in other environments."
-msgstr ""
+msgstr "Hibernate ORM Quarkusエクステンションでは、いくつかのデフォルト設定が、開発モードとテストモードで他の環境とは異なるように設定されています。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:316
 msgid "`quarkus.hibernate-orm.sql-load-script` is set to `no-file` for all profiles except the `dev` and `test` ones."
-msgstr ""
+msgstr "`dev` と `test` 以外のプロフィールは `quarkus.hibernate-orm.sql-load-script` が `no-file` に設定されています。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:320
 msgid "You can override it in your `application.properties` explicitly (e.g. `%prod.quarkus.hibernate-orm.sql-load-script = import.sql`)  but we wanted you to avoid overriding your database by accident in prod :)"
-msgstr ""
+msgstr "ユーザーが `application.properties` で明示的にオーバーライドすることもできますが (例: `%prod.quarkus.hibernate-orm.sql-load-script = import.sql` )、prod で誤ってデータベースをオーバーライドしないようにしたいと思いました :)"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:323
 msgid "Speaking of, make sure to not drop your database schema in production! Add the following in your properties file."
-msgstr ""
+msgstr "そういえば、本番ではデータベーススキーマを落とさないようにしましょう!プロパティーファイルに以下を追加します。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:332
 #, no-wrap
 msgid "Caching"
-msgstr ""
+msgstr "キャッシング"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:335
@@ -628,12 +634,12 @@ msgstr ""
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:336
 #, no-wrap
 msgid "Caching of entities"
-msgstr ""
+msgstr "エンティティーのキャッシュ"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:339
 msgid "To enable second-level cache, mark the entities that you want cached with `@javax.persistence.Cacheable`:"
-msgstr ""
+msgstr "第 2 レベルのキャッシュを有効にするには、キャッシュしたいエンティティーを `@javax.persistence.Cacheable` でマークします。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:348
@@ -650,7 +656,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:351
 msgid "When an entity is annotated with `@Cacheable`, all its field values are cached except for collections and relations to other entities."
-msgstr ""
+msgstr "エンティティーが `@Cacheable` でアノテーションされているときは、コレクションと他のエンティティーとの関係を除いて、そのすべてのフィールド値がキャッシュされます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:353
@@ -661,7 +667,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:354
 #, no-wrap
 msgid "Caching of collections and relations"
-msgstr ""
+msgstr "コレクションとリレーションのキャッシング"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:357
@@ -752,7 +758,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:403
 #, no-wrap
 msgid "Tuning of Cache Regions"
-msgstr ""
+msgstr "キャッシュ領域の調整"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:406
@@ -798,12 +804,12 @@ msgstr ""
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:430
 #, no-wrap
 msgid "Limitations of Caching"
-msgstr ""
+msgstr "キャッシングの制限"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:433
 msgid "The caching technology provided within Quarkus is currently quite rudimentary and limited."
-msgstr ""
+msgstr "Quarkusで提供されているキャッシング技術は、現在のところ非常に初歩的で限られています。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:435
@@ -913,12 +919,12 @@ msgstr ""
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:484
 #, no-wrap
 msgid "Limitations and other things you should know"
-msgstr ""
+msgstr "制限事項など知っておくべきこと"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:488
 msgid "Quarkus does not modify the libraries it uses; this rule applies to Hibernate ORM as well: when using this extension you will mostly have the same experience as using the original library."
-msgstr ""
+msgstr "Quarkusは使用するライブラリを変更しません。このルールはHibernate ORMにも適用されます。このエクステンションを使用すると、元のライブラリを使用した場合とほとんど同じエクスペリエンスが得られます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:492
@@ -929,7 +935,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:493
 #, no-wrap
 msgid "Automatic build time enhancement"
-msgstr ""
+msgstr "自動ビルド時間の強化"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:497
@@ -945,13 +951,13 @@ msgstr ""
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:502
 #, no-wrap
 msgid "Automatic integration"
-msgstr ""
+msgstr "自動統合"
 
 #. type: Labeled list
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:504
 #, no-wrap
 msgid "Transaction Manager integration"
-msgstr ""
+msgstr "トランザクション・マネージャーの統合"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:508
@@ -962,7 +968,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:509
 #, no-wrap
 msgid "Connection pool"
-msgstr ""
+msgstr "接続プール"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:513
@@ -973,7 +979,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:514
 #, no-wrap
 msgid "Second Level Cache"
-msgstr ""
+msgstr "セカンドレベルキャッシュ"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:517
@@ -1023,7 +1029,7 @@ msgstr ""
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:535
 #, no-wrap
 msgid "Binding the Session to ThreadLocal context"
-msgstr ""
+msgstr "セッションをThreadLocalコンテキストにバインドする"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:540
@@ -1056,13 +1062,13 @@ msgstr ""
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:549
 #, no-wrap
 msgid "Other notable differences"
-msgstr ""
+msgstr "その他の特記すべき相違点"
 
 #. type: Labeled list
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:551
 #, no-wrap
 msgid "Format of `import.sql`"
-msgstr ""
+msgstr "`import.sql` のフォーマット"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:555
@@ -1084,33 +1090,33 @@ msgstr ""
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:560
 #, no-wrap
 msgid "Configure your datasource"
-msgstr ""
+msgstr "データソースの設定"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:564
 msgid "Datasource configuration is extremely simple, but is covered in a different guide as technically it's implemented by the Agroal connection pool extension for Quarkus."
-msgstr ""
+msgstr "データソースの設定は非常にシンプルですが、技術的にはQuarkus用のAgroal接続プールエクステンションによって実装されているため、別のガイドで説明します。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:566
 msgid "Jump over to link:datasource[Quarkus - Datasources] for all details."
-msgstr ""
+msgstr "すべての詳細については、 link:datasource[Quarkus - データソース] にジャンプしてください。"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:567
 #, no-wrap
 msgid "Multitenancy"
-msgstr ""
+msgstr "マルチテナンシー"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:570
 msgid "\"The term multitenancy, in general, is applied to software development to indicate an architecture in which a single running instance of an application simultaneously serves multiple clients (tenants). This is highly common in SaaS solutions. Isolating information (data, customizations, etc.) pertaining to the various tenants is a particular challenge in these systems. This includes the data owned by each tenant stored in the database\" (link:https://docs.jboss.org/hibernate/orm/5.4/userguide/html_single/Hibernate_User_Guide.html#multitenacy[Hibernate User Guide])."
-msgstr ""
+msgstr "\"マルチテナンシーという用語は、一般的にソフトウェア開発に適用され、アプリケーションの単一の実行中のインスタンスが同時に複数のクライアント(テナント)にサービスを提供するアーキテクチャを示しています。これはSaaSソリューションでは非常に一般的です。様々なテナントに関連する情報(データ、カスタマイズなど)を分離することは、これらのシステムでは特別な課題です。これには、データベースに格納されている各テナントが所有するデータも含まれます。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:572
 msgid "Quarkus currently supports the link:https://docs.jboss.org/hibernate/orm/5.4/userguide/html_single/Hibernate_User_Guide.html#multitenacy-separate-database[separate database] and the link:https://docs.jboss.org/hibernate/orm/5.4/userguide/html_single/Hibernate_User_Guide.html#multitenacy-separate-schema[separate schema] approach."
-msgstr ""
+msgstr "Quarkusは現在、 link:https://docs.jboss.org/hibernate/orm/5.4/userguide/html_single/Hibernate_User_Guide.html#multitenacy-separate-database[分離型データベース] と link:https://docs.jboss.org/hibernate/orm/5.4/userguide/html_single/Hibernate_User_Guide.html#multitenacy-separate-schema[分離型スキーマ] アプローチをサポートしています。"
 
 #. type: Title ===
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:573
@@ -1121,7 +1127,7 @@ msgstr "アプリケーションの記述"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:576
 msgid "Let's start by implementing the `/{tenant}` endpoint. As you can see from the source code below it is just a regular JAX-RS resource:"
-msgstr ""
+msgstr "まずは `/{tenant}` エンドポイントを実装してみましょう。下のソースコードを見るとわかるように、これは通常の JAX-RS リソースです。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:586
@@ -1320,7 +1326,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:681
 msgid "Here is an example of the Flyway SQL (`V1.0.0__create_fruits.sql`) to be created in the configured folder `src/main/resources/schema`."
-msgstr ""
+msgstr "ここでは、設定されたフォルダー `src/main/resources/schema` に作成される Flyway SQL ( `V1.0.0__create_fruits.sql` ) の例を示します。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:694
@@ -1363,7 +1369,7 @@ msgstr "データベースアプローチ"
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:712
 msgid "For every tenant you need to create a named data source with the same identifier that is returned by the `TenantResolver`."
-msgstr ""
+msgstr "すべてのテナントに対して、 `TenantResolver` が返すのと同じ識別子を持つ名前付きデータソースを作成する必要があります。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:720
@@ -1416,12 +1422,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:743
 msgid "Following are examples of the Flyway SQL files to be created in the configured folder `src/main/resources/database`."
-msgstr ""
+msgstr "以下は、設定されたフォルダー `src/main/resources/database` に作成する Flyway SQL ファイルの例です。"
 
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:745
 msgid "Default schema (`src/main/resources/database/default/V1.0.0__create_fruits.sql`):"
-msgstr ""
+msgstr "デフォルトスキーマ ( `src/main/resources/database/default/V1.0.0__create_fruits.sql` )。"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:758
@@ -1442,7 +1448,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:761
 msgid "Mycompany schema (`src/main/resources/database/mycompany/V1.0.0__create_fruits.sql`):"
-msgstr ""
+msgstr "Mycompany schema (`src/main/resources/database/mycompany/V1.0.0__create_fruits.sql`):"
 
 #. type: delimited block -
 #: upstream/_versions/1.7/guides/hibernate-orm.adoc:774
