--- a/l10n/po/ja_JP/_guides/gcp-functions-http.adoc.po
+++ b/l10n/po/ja_JP/_guides/gcp-functions-http.adoc.po
@@ -109,7 +109,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #: upstream/_guides/gcp-functions-http.adoc:41
 #, fuzzy
 msgid "The solution is located in the `google-cloud-functions-http-quickstart` {quickstarts-tree-url}/google-cloud-functions-http-quickstart[directory]."
-msgstr "解決策は `google-cloud-functions-http-quickstart` {quickstarts-tree-url}/google-cloud-functions-http-quickstart[ディレクトリ] にあります。"
+msgstr "ソリューションは `google-cloud-functions-http-quickstart` {quickstarts-tree-url}/google-cloud-functions-http-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_guides/gcp-functions-http.adoc:42
