Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.11/guides/security-oauth2.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/security-oauth2.adoc.po
@@ -433,7 +433,7 @@ msgstr ""
 #: upstream/_versions/1.11/guides/security-oauth2.adoc:241
 #, no-wrap
 msgid "Generating a token"
-msgstr ""
+msgstr "トークンの生成"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-oauth2.adoc:244
@@ -496,7 +496,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-oauth2.adoc:274
 msgid "an authentication scheme of OAuth2"
-msgstr ""
+msgstr "OAuth2 の認証方式"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/security-oauth2.adoc:275
@@ -578,12 +578,12 @@ msgstr ""
 #: upstream/_versions/1.11/guides/security-oauth2.adoc:323
 #, no-wrap
 msgid "Integration testing"
-msgstr ""
+msgstr "統合テスト"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-oauth2.adoc:327
 msgid "If you don't want to use a real OAuth2 authorization server for your integration tests, you can use the link:security-properties[Properties based security] extension for your test, or mock an authorization server using Wiremock."
-msgstr ""
+msgstr "統合テストに本物の OAuth2 認証サーバーを使用したくない場合は、 link:security-properties[Properties ベースのセキュリティー] エクステンションをテストに使用するか、Wiremock を使用して認証サーバーをモックすることができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-oauth2.adoc:329
@@ -620,7 +620,7 @@ msgstr "`@QuarkusTestResource` の詳細については、 link:getting-started-
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-oauth2.adoc:352
 msgid "Let's create an implementation of `QuarkusTestResourceLifecycleManager` called `MockAuthorizationServerTestResource` like so:"
-msgstr ""
+msgstr "このように `QuarkusTestResourceLifecycleManager` の実装である `MockAuthorizationServerTestResource` を作成してみましょう。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/security-oauth2.adoc:358
@@ -784,12 +784,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security-oauth2.adoc:435
 msgid "Use this token inside the `Authorization` header to trigger OAuth2 authentication."
-msgstr ""
+msgstr "このトークンを `Authorization` ヘッダ内で使用して、OAuth2 認証を開始します。"
 
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/security-oauth2.adoc:440
 msgid "`@QuarkusTestResource` applies to all tests, not just `TokenSecuredResourceTest`."
-msgstr ""
+msgstr "`@QuarkusTestResource` は `TokenSecuredResourceTest` だけでなく、すべてのテストに適用されます。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/security-oauth2.adoc:443
