--- a/l10n/po/ja_JP/_versions/1.11/guides/security.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/security.adoc.po
@@ -174,22 +174,22 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security.adoc:81
 msgid "`quarkus-oidc-client` extension provides `OidcClient` for acquiring and refreshing access tokens from OpenId Connect and OAuth2 providers which support `client-credentials`, `password` and `refresh_token` token grants."
-msgstr ""
+msgstr "`quarkus-oidc-client` エクステンションは、 `client-credentials` , `password` , `refresh_token` トークングラントをサポートする OpenId Connect および OAuth2 プロバイダからアクセストークンを取得したり、更新したりするための `OidcClient` を提供します。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security.adoc:83
 msgid "`quarkus-oidc-client-filter` extension depends on the `quarkus-oidc-client` extension and provides JAX-RS `OidcClientRequestFilter` which sets the access token acquired by `OidcClient` as an HTTP `Authorization` header's `Bearer` scheme value. This filter can be registered with MP RestClient implementations injected into the current Quarkus endpoint but it is not related to the authentication requirements of this service endpoint. For example, it can be a public endpoint or it can be protected with MTLS - the important point is that this Quarkus endpoint does not have to be protected itself with the Quarkus OpenId Connect adapter."
-msgstr ""
+msgstr "`quarkus-oidc-client-filter` エクステンションは `quarkus-oidc-client` エクステンションに依存し、 `OidcClient` で取得したアクセストークンを HTTP `Authorization` ヘッダーの `Bearer` スキーム値として設定する JAX-RS `OidcClientRequestFilter` を提供します。このフィルターは、現在のQuarkusエンドポイントに注入されたMP RestClient実装で登録することができますが、このサービスエンドポイントの認証要件には関係ありません。例えば、パブリックエンドポイントにすることもできますし、MTLSで保護することもできます - 重要な点は、このQuarkusエンドポイントは、Quarkus OpenId Connectアダプターでそれ自体を保護する必要がないということです。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security.adoc:85
 msgid "`quarkus-oidc-token-propagation` extension depends on the `quarkus-oidc` extension and provides JAX-RS `TokenCredentialRequestFilter` which sets the OpenId Connect Bearer or Authorization Code Flow access token as an HTTP `Authorization` header's `Bearer` scheme value. This filter can be registered with MP RestClient implementations injected into the current Quarkus endpoint and the Quarkus endpoint must be protected itself with the Quarkus OpenId Connect adapter. This filter can be used to propagate the access token to the downstream services."
-msgstr ""
+msgstr "`quarkus-oidc-token-propagation` エクステンションは `quarkus-oidc` エクステンションに依存し、OpenId Connect ベアラーまたは Authorization Code Flow アクセストークンを HTTP `Authorization` ヘッダーの `Bearer` スキーム値として設定する JAX-RS `TokenCredentialRequestFilter` を提供します。このフィルターは、現在のQuarkusエンドポイントに注入されたMP RestClient実装で登録することができ、QuarkusエンドポイントはQuarkus OpenId Connectアダプターでそれ自体を保護する必要があります。このフィルターは、アクセストークンを下流のサービスに伝播させるために使用できます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/security.adoc:87
 msgid "See the link:security-openid-connect-client[Using OpenID Connect and OAuth2 Client] guide for more information."
-msgstr ""
+msgstr "詳細については、 link:security-openid-connect-client[OpenID Connect と OAuth2 クライアントの使用] ガイドを参照してください。"
 
 #. type: Title ===
 #: upstream/_versions/1.11/guides/security.adoc:89
