--- a/l10n/po/ja_JP/_versions/1.11/guides/vault.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/vault.adoc.po
@@ -210,12 +210,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/vault.adoc:96
 msgid "In development mode, Vault gets configured with several options that makes it convenient:"
-msgstr ""
+msgstr "開発モードでは、Vaultはそれを便利にするいくつかのオプションが設定されます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/vault.adoc:99
 msgid "Vault is already initialized with one key share (whereas in normal mode this has to be done explicitly and the number of key shares is 5 by default)"
-msgstr ""
+msgstr "Vault はすでに 1 つのキーシェアで初期化されています (通常のモードではこれは明示的に行う必要があり、キーシェアの数はデフォルトでは 5 となっています)。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/vault.adoc:101
@@ -240,7 +240,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/vault.adoc:105
 msgid "a _kv secret engine v2_ is mounted at `secret/`"
-msgstr ""
+msgstr "_kvシークレットエンジン v2_ `secret/` にマウントされています"
 
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/vault.adoc:111
@@ -255,7 +255,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/vault.adoc:117
 msgid "First open a shell inside the vault container:"
-msgstr ""
+msgstr "まず、Vaultのコンテナの中の貝殻を開けます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/vault.adoc:121
