--- a/l10n/po/ja_JP/_versions/1.11/guides/openapi-swaggerui.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/openapi-swaggerui.adoc.po
@@ -28,7 +28,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:12
 msgid "This guide explains how your Quarkus application can expose its API description through an OpenAPI specification and how you can test it via a user-friendly UI named Swagger UI."
-msgstr ""
+msgstr "このガイドでは、QuarkusアプリケーションがOpenAPI仕様でAPIの説明を公開する方法と、Swagger UIというユーザーフレンドリーなUIを介してテストする方法について説明します。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:13
@@ -70,7 +70,7 @@ msgstr "アーキテクチャ"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:26
 msgid "In this guide, we create a straightforward REST application to demonstrate how fast you can expose your API specification and benefit from a user interface to test it."
-msgstr ""
+msgstr "このガイドでは、API の仕様をいかに早く公開し、ユーザーインターフェイスから利益を得てテストできるかを実証するために、簡単な REST アプリケーションを作成します。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:27
@@ -90,7 +90,7 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 #. type: Plain text
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:35
 msgid "The solution is located in the `openapi-swaggerui-quickstart` {quickstarts-tree-url}/openapi-swaggerui-quickstart[directory]."
-msgstr ""
+msgstr "ソリューションは `openapi-swaggerui-quickstart` {quickstarts-tree-url}/openapi-swaggerui-quickstart[ディレクトリ] にあります。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:36
@@ -119,7 +119,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:52
 msgid "This command generates the Maven project with a `/fruits` REST endpoint."
-msgstr ""
+msgstr "このコマンドは、 `/fruits` RESTエンドポイントを持つMavenプロジェクトを生成します。"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:53
@@ -130,7 +130,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:57
 msgid "We will create a `Fruit` bean and a `FruitResouce` REST resource (feel free to take a look to the link:rest-json[Writing JSON REST services guide] if your want more details on how to build a REST API with Quarkus)."
-msgstr ""
+msgstr "`Fruit` Beanと `FruitResouce` RESTリソースを作成します(QuarkusでREST APIを構築する方法の詳細については、 link:rest-json[Writing JSON REST servicesガイド] を参照してください)。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:61
@@ -250,7 +250,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:119
 msgid "As we changed the API, we also need to update the test:"
-msgstr ""
+msgstr "APIを変更したので、テストの更新も必要です。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:126
@@ -349,7 +349,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:180
 msgid "You just need to add the `openapi` extension to your Quarkus application:"
-msgstr ""
+msgstr "Quarkusアプリケーションに `openapi` のエクステンションを追加するだけです。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:184
@@ -442,7 +442,7 @@ msgstr ""
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:255
 msgid "If you do not like the default endpoint location `/q/openapi`, you can change it by adding the following configuration to your `application.properties`:"
-msgstr ""
+msgstr "あなたがデフォルトのエンドポイントの場所 `/q/openapi` を好きではない場合 , あなたの `application.properties` に次の設定を追加することで、場所を変更することができます ."
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:258
@@ -460,12 +460,12 @@ msgstr "`CTRL+C`  を叩いてアプリケーションを停止させます。"
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:263
 #, no-wrap
 msgid "Providing Application Level OpenAPI Annotations"
-msgstr ""
+msgstr "アプリケーションレベルのOpenAPIアノテーションの提供"
 
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:266
 msgid "There are some MicroProfile OpenAPI annotations which describe global API information, such as the following:"
-msgstr ""
+msgstr "以下のようなグローバルAPI情報を記述するMicroProfile OpenAPIアノテーションがあります。"
 
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:268
@@ -652,7 +652,7 @@ msgstr ""
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:393
 msgid "Quarkus supports various paths to store your OpenAPI document under. We recommend you place it under `META-INF/openapi.yml`.  Alternative paths are:"
-msgstr ""
+msgstr "Quarkusは、OpenAPIドキュメントを保存するためのさまざまなパスをサポートしています。 `META-INF/openapi.yml` 以下に配置することをお勧めします。代替パスは以下の通りです。"
 
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:395
@@ -791,12 +791,12 @@ msgstr "クラス名とメソッド名を使用します。"
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:442
 #, no-wrap
 msgid "Use Swagger UI for development"
-msgstr ""
+msgstr "開発にSwagger UIを使用する"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:447
 msgid "When building APIs, developers want to test them quickly. https://swagger.io/tools/swagger-ui/[Swagger UI] is a great tool permitting to visualize and interact with your APIs.  The UI is automatically generated from your OpenAPI specification."
-msgstr ""
+msgstr "APIを構築する際、開発者は素早くテストしたいと考えています。 link:https://swagger.io/tools/swagger-ui/[Swagger UI] は、APIを視覚化して対話するための素晴らしいツールです。UIはOpenAPI仕様から自動的に生成されます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:449
@@ -806,12 +806,12 @@ msgstr ""
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:453
 msgid "By default, Swagger UI is only available when Quarkus is started in dev or test mode."
-msgstr ""
+msgstr "デフォルトでは、Swagger UIは、Quarkusをdevモードまたはtestモードで起動したときにのみ使用できます。"
 
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:455
 msgid "If you want to make it available in production too, you can include the following configuration in your `application.properties`:"
-msgstr ""
+msgstr "本番環境でも利用できるようにしたい場合は、以下の設定を `application.properties` に追加してください。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:458
@@ -822,17 +822,17 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:461
 msgid "This is a build time property, it cannot be changed at runtime after your application is built."
-msgstr ""
+msgstr "これはビルドタイムプロパティーで、アプリケーションがビルドされた後、ランタイムに変更することはできません。"
 
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:465
 msgid "By default, Swagger UI is accessible at `/q/swagger-ui`."
-msgstr ""
+msgstr "デフォルトでは、Swagger UIは `/q/swagger-ui` でアクセス可能です。"
 
 #. type: delimited block =
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:467
 msgid "You can update the `/swagger-ui` sub path by setting the `quarkus.swagger-ui.path` property in your `application.properties`:"
-msgstr ""
+msgstr "`application.properties` の `quarkus.swagger-ui.path` プロパティーを設定することで、 `/swagger-ui` サブパスを更新することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:471
@@ -848,7 +848,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:487
 msgid "You can check the Swagger UI path in your application's log:"
-msgstr ""
+msgstr "アプリケーションのログでSwaggerのUIパスを確認することができます。"
 
 #. type: delimited block -
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:491
@@ -859,17 +859,17 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:494
 msgid "Once your application is started, you can go to http://localhost:8080/q/swagger-ui and play with your API."
-msgstr ""
+msgstr "アプリケーションが起動したら、 http://localhost:8080/q/swagger-ui にアクセスしてAPIで遊ぶことができます。"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:497
 msgid "You can visualize your API's operations and schemas.  image:openapi-swaggerui-guide-screenshot01.png[alt=Visualize your API]"
-msgstr ""
+msgstr "APIの操作やスキーマを可視化することができます。 image:openapi-swaggerui-guide-screenshot01.png[alt=\"Visualize your API\"]"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:500
 msgid "You can also interact with your API in order to quickly test it.  image:openapi-swaggerui-guide-screenshot02.png[alt=Interact with your API]"
-msgstr ""
+msgstr "また、APIを素早くテストするためにAPIと対話することもできます。 image:openapi-swaggerui-guide-screenshot02.png[alt=\"Interact with your API\"]"
 
 #. type: Title ==
 #: upstream/_versions/1.11/guides/openapi-swaggerui.adoc:503
