--- a/l10n/po/ja_JP/_versions/1.11/guides/microprofile-health.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/microprofile-health.adoc.po
@@ -592,7 +592,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/1.11/guides/microprofile-health.adoc:336
 msgid "Experimental - not included in the MicroProfile specification"
-msgstr ""
+msgstr "実験的 - MicroProfileの仕様に含まれません"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/microprofile-health.adoc:338
